# futcon

./: .gitignore  PROMPTS.md  README.md
backend/: pyproject.toml
backend/app/: main.py
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: vendors.ts
frontend/src/components/: AntennaList.tsx  TechnologyRankingControls.tsx  VendorCard.tsx  VendorInsightCard.tsx  VendorTable.tsx  icons.tsx
frontend/src/lib/: vendor.ts
frontend/src/routes/: __root.tsx  global-ranking.tsx  technology-ranking.tsx  vendor-detail.tsx
frontend/src/tests/: global-ranking.test.tsx  technology-ranking.test.tsx  vendor-detail.test.tsx  vendor-utils.test.ts
