[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-backend"
version = "0.1.0"
description = "FastAPI backend serving telecom vendor data"
authors = [
  { name = "Future Con Team" }
]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0,<0.112",
  "uvicorn[standard]>=0.30.0,<0.31"
]

[project.scripts]
dev = "backend.app.main:run_dev"
